# oa

./: .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  .oa-public-snapshot  BUILD_WEEK.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE.md  README.md  pyproject.toml  vcpkg-configuration.json  vcpkg.json
Apps/: CMakeLists.txt
Apps/Android/OaMobileLab/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
Apps/Ml/: CMakeLists.txt
Apps/Ml/Gen3dAnim/: dsgen3danimctl.cpp  genalm.cpp  trainalm.cpp
Apps/Ml/chatlm/: main.cpp
Apps/Ml/modelctl/: main.cpp
Apps/Ml/util/: datasetctl.cpp
Examples/: .gitignore  CMakeLists.txt  README.md
Examples/Ml/: MlTrainingMain.cpp  MlTrainingSimple.cpp
Examples/Ml/Alm/: AlmAg.cpp  README.md
Source/: CMakeLists.txt
Source/Public/Oa/: Audio.h  Core.h  Crypto.h  Data.h  Ml.h  Network.h  Oa.h  Runtime.h  Ui.h  Vision.h
Source/Python/: Binding.h  Module.cpp  test_audio.py  test_crypto.py  test_filesystem.py  test_nlp_suite.py  test_rl.py  test_runtime_lifecycle.py  test_smoke.py  test_stubs.py  test_surface.py  test_tutorials.py  test_vision.py
Source/Python/Audio/: Audio.cpp  Codec.cpp  FnAudio.cpp  Type.cpp
Source/Python/Core/: Backward.cpp  Core.cpp  Factory.cpp  Filesystem.cpp  FnMatrix.cpp  FnMatrixOps.gen.inl  Type.cpp
Source/Python/Crypto/: Binding.h  Crypto.cpp  FnHash.cpp  Hash.cpp  Sign.cpp
Source/Python/Ml/: Autograd.cpp  FnLossOps.gen.inl  Loss.cpp  Ml.cpp  Module.cpp  Nlp.cpp  Nn.cpp  Optim.cpp  Rl.cpp  Training.cpp
Source/Python/Runtime/: Runtime.cpp
Source/Python/Ui/: Plot.cpp  Viewer.cpp
Source/Python/Vision/: Codec.cpp  Detection.cpp  Image.cpp  Type.cpp  Video.cpp  Vision.cpp
Source/Python/oa/: OaFnAudio.pyi  OaFnAutograd.pyi  OaFnDetection.pyi  OaFnImage.pyi  OaFnLoss.pyi  OaFnMatrix.pyi  OaFnMetric.pyi  OaFnRl.pyi  OaPlot.pyi  __init__.py  __init__.pyi  _module.py  _native.py  _surface.py  audio.py  audio.pyi  core.py  core.pyi  crypto.py  crypto.pyi  gymnasium.py  ml.py  ml.pyi  plot.py  plot.pyi  runtime.py  runtime.pyi  vision.py  vision.pyi
Test/: CMakeLists.txt  OaTest.h  OaTestVk.h
Test/Audio/: TestFnAudio.cpp
Test/Audio/Codec/: TestAudioDecoder.cpp  TestAudioSessionLifecycle.cpp
Test/Compute/: TestGemmCmSgBf16.cpp
Test/Core/: TestAudio.cpp  TestImage.cpp  TestMatrixOperators.cpp
Test/Core/Container/: TestContainers.cpp  TestMatrixRefList.cpp  TestMatrixStorage.cpp
Test/Core/Memory/: BenchMemcpyNt.cpp  BenchMemory.cpp  TestMemory.cpp
Test/Core/Misc/: TestCoreMisc.cpp  TestTypes.cpp  TestValidation.cpp
Test/Core/Std/: OaStdTest.h  TestAlgo.cpp  TestAllocator.cpp  TestArray.cpp  TestCString.cpp  TestFormat.cpp  TestFunction.cpp  TestHashMap.cpp  TestHashSet.cpp  TestOptional.cpp  TestPairLimits.cpp  TestPath.cpp  TestRandom.cpp  TestSharedPtr.cpp  TestSpan.cpp  TestString.cpp  TestStringView.cpp  TestSync.cpp  TestUniquePtr.cpp  TestVariant.cpp  TestVec.cpp
Test/Core/Threading/: TestThreading.cpp
Test/Core/Transform/: TestTransform.cpp
Test/Crypto/: CryptoTestMain.cpp
Test/Crypto/Hash/: BenchHash.cpp  TestFnHash.cpp  TestFnHashExtended.cpp  TestHash.cpp  TestKeccak.cpp
Test/Crypto/Sign/: TestSign.cpp
Test/Ml/: MlTestMain.cpp
Test/Ml/Byte/: TestByteEmbedding.cpp
Test/Ml/Data/: TestDataLoader.cpp  TestTokenizer.cpp
Test/Ml/Generative/: TestFlow.cpp
Test/Ml/Grad/: TestFnMatrix.cpp
Test/Ml/Io/: TestGptOssConfig.cpp  TestOamIntegrity.cpp  TestSafeTensorReader.cpp
Test/Ml/Loss/: TestFnLoss.cpp
Test/Ml/Nn/: BenchMamba3.cpp  BenchMoeComponents.cpp  BenchTransformerComponents.cpp  TestAttention.cpp  TestClipText.cpp  TestGen3dAnimIo.cpp  TestGru.cpp  TestGruNumericalGrad.cpp  TestGruScan.cpp  TestLinearGelu.cpp  TestMamba3.cpp  TestMoeGradcheck.cpp  TestMoeSystems.cpp  TestNnKernels.cpp  TestNnLayers.cpp  TestNnModules.cpp  TestPoseClip.cpp  (+4 more)
Test/Render/: TestCamera.cpp  TestLunarLander3dRender.cpp
Test/Retarget/: TestRetarget.cpp
Test/Rig/: TestSkeleton.cpp
Test/Ui/: TestUi.cpp
Tutorial/: CMakeLists.txt
Tutorial/Core/: TutorialCoreDeviceCanary.cpp  TutorialCoreEngine.cpp  TutorialCoreMatMulIntro.cpp  TutorialCoreRuntimeSimple.cpp
Tutorial/Crypto/: TutorialCryptoCyberRangeIntegrity.cpp
Tutorial/Ml/: MlTutorialTemplate.h  TutorialMambaDiffusionPixel.cpp  TutorialMl.h  TutorialMnistClassifierAg.cpp  TutorialMnistClassifierApi1.cpp  TutorialNlpBpeCommon.h  TutorialNlpBpeGruAg.cpp  TutorialNlpBpeMamba3Ag.cpp  TutorialNlpBpeModels.h  TutorialNlpBpeMoeAg.cpp  TutorialNlpBpeRnnAg.cpp  TutorialNlpBpeTransformerAg.cpp  TutorialNlpByteEmpyrealmAg.cpp  TutorialNlpByteGruAg.cpp  TutorialNlpByteMamba3Ag.cpp  TutorialNlpByteMoeAg.cpp  TutorialNlpByteRnnAg.cpp  TutorialNlpByteTransformerAg.cpp  TutorialNlpCharGruAg.cpp  TutorialNlpCharMamba3Ag.cpp  TutorialNlpCharModels.h  TutorialNlpCharMoeAg.cpp  TutorialNlpCharRnnAg.cpp  TutorialNlpCharTransformerAg.cpp  TutorialNlpCommon.h
Tutorial/Plot/: TutorialImageGridClassify.cpp
Tutorial/Py/: README.md  TutorialMnistClassifierAutograd.py  TutorialNlpByteEmpyrealmAg.py  TutorialNlpByteGruAg.py  TutorialNlpByteMamba3Ag.py  TutorialNlpByteRnnAg.py  TutorialNlpByteTransformerAg.py  TutorialNlpCharGruAg.py  TutorialNlpRnn.py  TutorialNlpRnnAutograd.py  _nlp_common.py  _oa_import.py
Tutorial/Vision/: TutorialCameraRecordH264.cpp  TutorialCvEvaluation.cpp  TutorialDetectionImage.cpp  TutorialDetectionVideo.cpp  TutorialScreenRecordH264.cpp  TutorialViewerAudio.cpp  TutorialViewerImage.cpp  TutorialViewerImageHeadless.cpp  TutorialViewerVideo.h  TutorialViewerVideoAv1.cpp  TutorialViewerVideoAv1Main8bit420.cpp  TutorialViewerVideoH264.cpp  TutorialViewerVideoH264High8bit420.cpp  TutorialViewerVideoH265.cpp  TutorialViewerVideoH265Main8bit420.cpp  TutorialViewerVideoVp9.cpp  TutorialViewerVideoVp9Profile0_8bit420.cpp  TutorialViewportCanvas.cpp  TutorialViewportImage.cpp  TutorialViewportImageHeadless.cpp  TutorialViewportVideoAv1.cpp  TutorialViewportVideoH264.cpp  TutorialViewportVideoH265.cpp  TutorialViewportVideoVp9.cpp  TutorialVision.h
(+1526 files in other folders)
